src/test/ui/resolve/token-error-correct-3.stderr
error: mismatched closing delimiter: `}`
  --> $DIR/token-error-correct-3.rs:16:9
   |
LL |             callback(path.as_ref();
   |                     - unmatched opening delimiter begins here
...
LL |         } else {
   |         ^ mismatched closing delimiter

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> $DIR/token-error-correct-3.rs:13:35
   |
LL |             callback(path.as_ref();
   |                                   ^
   |                                   |
   |                                   expected one of `)`, `,`, `.`, `?`, or an operator
   |                                   help: missing `,`

error[E0425]: cannot find function `is_directory` in this scope
  --> $DIR/token-error-correct-3.rs:11:13
   |
LL |         if !is_directory(path.as_ref()) {
   |             ^^^^^^^^^^^^ not found in this scope

error[E0057]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/token-error-correct-3.rs:13:13
   |
LL |             callback(path.as_ref();
   |             ^^^^^^^^
LL |
LL |             fs::create_dir_all(path.as_ref()).map(|()| true)
   |             ------------------------------------------------ argument of type `Result<bool, std::io::Error>` unexpected
   |
note: callable defined here
  --> $DIR/token-error-correct-3.rs:8:49
   |
LL |     pub fn ensure_dir_exists<P: AsRef<Path>, F: FnOnce(&Path)>(path: P,
   |                                                 ^^^^^^^^^^^^^
help: remove the extra argument
   |
LL |             callback(path.as_ref()) else {
   |                     ~~~~~~~~~~~~~~~

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0057, E0425.
For more information about an error, try `rustc --explain E0057`.
